home/k8s/apps/default/beta-k8s-api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: le-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: external-kube-api
  labels:
    app: external-kube-api
spec:
  rules:
    - host: api.k8s.home.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apik8sinternal
                port:
                  number: 6443
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
      - api.k8s.home.waltr.tech
      secretName: apik8shomewaltrtech-cert # < cert-manager will store the created certificate in this secret
